--- a/Midterm/index.html
+++ b/Midterm/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html>
-<title>Motivational Music</title>
-<meta charset="UTF-8">
-<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/amplitudejs@{{v5.3.1}}/dist/amplitude.js"></script>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" type ="text/css" href="css/lab.css">
-<script src="js/lab.js" defer></script>
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="https://www.w3schools.com/lib/w3-theme-black.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <head>
+    <title>Motivational Music</title>
+    <meta charset="UTF-8">
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/amplitudejs@{{v5.3.1}}/dist/amplitude.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type ="text/css" href="css/lab.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="  crossorigin="anonymous"></script>
+    <script type="text/javascript" src="js/lab.js" defer></script>
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="https://www.w3schools.com/lib/w3-theme-black.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  </head>
 <body id="myPage">
 
 <!-- Sidebar on click -->
@@ -98,25 +101,25 @@
 
 <div class="w3-row"><br>
 
-<div class="w3-quarter">
+<div class="hidey mauricio">
   <img src="img/pic.jpg" alt="Boss" width="150" height="210" class="w3-circle w3-hover-opacity">
   <h3>Mauricio Vega</h3>
   <p>Rock/Alternative Junky!</p>
 </div>
 
-<div class="w3-quarter">
+<div class="hidey brianna">
   <img src="img/bri.jpeg" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity">
   <h3>Brianna Sanchez Ortega</h3>
   <p>Country Junky!</p>
 </div>
 
-<div class="w3-quarter">
+<div class="hidey ish">
   <img src="img/ishy.b.jpg" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity">
   <h3>Ishmael Burton</h3>
   <p>Rap/Hip-Hop Junky!</p>
 </div>
 
-<div class="w3-quarter">
+<div class="hidey jeremy">
   <img src="img/jeremy.jpg" alt="Boss" width="150" height="210" class="w3-circle w3-hover-opacity">
   <h3>Jeremy Jacob Fransisco</h3>
   <p>Jazzmaster Junky!</p>
