hide everyones life

--- a/Midterm/index.html
+++ b/Midterm/index.html
@@ -131,7 +131,7 @@
 <!-- Pricing Row -->
 <div class="w3-row-padding w3-center" id="playlist">
     <h2><b>P  L  A  Y  L  I  S  T</b></h2><br><br>
-    <div class="w3-quarter w3-margin-bottom">
+    <div class="hidey mauricio">
       <ul class="w3-ul w3-border w3-hover-shadow">
         <li class="w3-theme">
           <p class="w3-xlarge">Rock/Alternative</p>
@@ -151,7 +151,7 @@
       </ul>
     </div>
 
-    <div class="w3-quarter w3-margin-bottom">
+    <div class="hidey brianna">
       <ul class="w3-ul w3-border w3-hover-shadow">
         <li class="w3-theme">
           <p class="w3-xlarge">Country</p>
@@ -171,7 +171,7 @@
       </ul>
     </div>
 
-    <div class="w3-quarter w3-margin-bottom">
+    <div class="hidey ish">
       <ul class="w3-ul w3-border w3-hover-shadow">
         <li class="w3-theme">
           <p class="w3-xlarge">Rap/Hip-Hop</p>
@@ -191,7 +191,7 @@
       </ul>
     </div>
 
-    <div class="w3-quarter w3-margin-bottom">
+    <div class="hidey jeremy">
       <ul class="w3-ul w3-border w3-hover-shadow">
         <li class="w3-theme">
           <p class="w3-xlarge">Jazz</p>
@@ -218,7 +218,7 @@
 <!-- Work Row -->
 <div class="w3-row-padding w3-padding-64 w3-theme-l1" id="about">
 
-<div class="w3-quarter">
+<div class="hidey mauricio">
   <div class="w3-card w3-white">
     <div class="w3-container">
     <h3>Rock/Alternative</h3>
@@ -232,7 +232,7 @@
     </div>
 </div>
 
-<div class="w3-quarter">
+<div class="hidey brianna">
 <div class="w3-card w3-white">
   <div class="w3-container">
   <h3>Country</h3>
@@ -244,7 +244,7 @@
   </div>
 </div>
 
-<div class="w3-quarter">
+<div class="hidey ish">
 <div class="w3-card w3-white">
   <div class="w3-container">
   <h3>Rap/Hip-Hop</h3>
@@ -255,7 +255,7 @@
   </div>
 </div>
 
-<div class="w3-quarter">
+<div class="hidey jeremy">
 <div class="w3-card w3-white">
   <div class="w3-container">
     <h3>Jazz</h3>
