--- a/Midterm/index.html
+++ b/Midterm/index.html
@@ -196,7 +196,7 @@
       </ul>
     </div>
 
-    <div class="hidey rock">
+    <div class="hidey rap">
       <ul class="w3-ul w3-border w3-hover-shadow">
         <li class="w3-theme">
           <p class="w3-xlarge">Rap/Hip-Hop Playlist</p>
