--- a/Midterm/index.html
+++ b/Midterm/index.html
@@ -125,14 +125,14 @@
 <div class="w3-row"><br>
 
 <div class="hidey rock">
-  <p>We think you would enjoy this genre: Country. Check the  Country playlist out below!</p>
+  <p>We think you would enjoy this genre: Rock. Check the Rock playlist out below!</p>
   <img src="img/pic.jpg" alt="Boss" width="150" height="210" class="w3-circle w3-hover-opacity">
   <h3>Mauricio Vega</h3>
   <p>Rock/Alternative Junky!</p>
 </div>
 
 <div class="hidey country">
-  <p>We think you would enjoy this genre: Country. Check the  Country playlist out below!</p>
+  <p>We think you would enjoy this genre: Country. Check the Country playlist out below!</p>
   <img src="img/bri.jpeg" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity">
   <h3>Brianna Sanchez Ortega</h3>
   <p>Country Junky!</p>
@@ -140,12 +140,14 @@
 </div>
 
 <div class="hidey rap">
+  <p>We think you would enjoy this genre: Rap. Check the Rap playlist out below!</p>
   <img src="img/ishy.b.jpg" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity">
   <h3>Ishmael Burton</h3>
   <p>Rap/Hip-Hop Junky!</p>
 </div>
 
 <div class="hidey jazz">
+  <p>We think you would enjoy this genre: Jazz. Check the Jazz playlist out below!</p>
   <img src="img/jeremy.jpg" alt="Boss" width="150" height="210" class="w3-circle w3-hover-opacity">
   <h3>Jeremy Jacob Fransisco</h3>
   <p>Jazzmaster Junky!</p>
