--- a/Midterm/index.html
+++ b/Midterm/index.html
@@ -234,7 +234,7 @@
         <li class="w3-padding-16"><img src="img/red.jpg" width="135" height="135"><audio src="mp3/jazz/line.mp3" controls></audio><b><br> Roy Ayers Ubiquity - Lifeline<br><br></b></li>
         </li>
         <li class="w3-theme-l5 w3-padding-24">
-          <button class="w3-button w3-teal w3-padding-large"><i class="fa fa-check"></i> Link to Playlist</button>
+          <button class="w3-button w3-teal w3-padding-large"><i class="fa fa-check"><a href="https://youtube.com/playlist?list=PLMM8NKzkCtlM6GUFxIQo5FCFhHtAy7J3w"></i> Link to Playlist</button>
         </li>
       </ul>
     </div>
