--- a/Midterm/index.html
+++ b/Midterm/index.html
@@ -90,32 +90,33 @@
 
 <div id="output">
   <h3> M U S I C&emsp;S U R V E Y </h3>
-  <p>1. Enter your name </p><input type="text" id="input">
-  <p>2. What kind of person are you?</p>
+  <p><b>1. Enter your name </b></p><input type="text" id="input">
+  <p><b>2. What kind of person are you?</b></p>
   <input type="radio" id="adventurous" name="personality" value="adventurous">
   <label for="adventurous">Adventurous</label>
   <input type="radio" id="female" name="gender" value="female">
   <label for="female">Serious</label>
   <input type="radio" id="female" name="gender" value="female">
   <label for="female">Shy</label>
-  <p>3. What is your favorite color? </p>
+  <p><b>3. What is your favorite color? </b></p>
   <div align="center">
-    <label><input type="checkbox" name="favcolors[]" value="cycling" /> black</label>
-    <label class='orange'><input type="checkbox" name="favcolors[]" value="orange" /> orange</label>
-    <label class='violet'><input type="checkbox" name="favcolors[]" value="violet" /> violet</label>
+    <label><input type="checkbox" name="favcolors[]" value="cycling" /> Black</label>
+    <label class='orange'><input type="checkbox" name="favcolors[]" value="orange" /> Orange</label>
+    <label class='purple'><input type="checkbox" name="favcolors[]" value="purple" /> Purple</label>
     <br>
     <label class='grey'><input type="checkbox" name="favcolors[]" value="Grey" /> Grey</label>
     <label class='yellow'><input type="checkbox" name="favcolors[]" value="Yellow" /> Yellow</label>
     <label><input type="checkbox" name="favcolors[]" value="White" /> White</label>
     <br>
-    <label class='red'><input type="checkbox" name="favcolors[]" value="red" /> red</label>
-    <label class='green'><input type="checkbox" name="favcolors[]" value="green" /> green</label>
-    <label><input type="checkbox" name="favcolors[]" value="other" /> other</label>
+    <label class='red'><input type="checkbox" name="favcolors[]" value="red" /> Red</label>
+    <label class='green'><input type="checkbox" name="favcolors[]" value="green" /> Green</label>
+    <label class='beige'><input type="checkbox" name="favcolors[]" value="beige"/> Beige</label>
     <br>
-    <label class='pink'><input type="checkbox" name="favcolors[]" value="pink" /> pink</label>
-    <label class='blue'><input type="checkbox" name="favcolors[]" value="blue" /> blue</label>
+    <label class='pink'><input type="checkbox" name="favcolors[]" value="pink" /> Pink</label>
+    <label class='blue'><input type="checkbox" name="favcolors[]" value="blue" /> Blue</label>
+    <label class='brown'><input type="checkbox" name="favcolors[]" value="brown"/> Brown</label>
   </div>
-  <p>4. How old are you? <p/> <input type="text" id="input"><br><br>
+  <p><b>4. How old are you? </b><p/> <input type="text" id="input"><br><br>
    <button id="button" class="w3-button w3-theme">ENTER</button>
 </div>
 
@@ -132,20 +133,22 @@
 </div>
 
 <div class="hidey country">
-  <p>We think you would enjoy this genre: Country. Check the  Country playlist out below!</p>
-  <img src="img/bri.jpeg" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity">
+  <p>Howdy! I think you would enjoy listening to Country Music. The Country playlist is down below! Give it a listen!</p>
+  <img src="img/bri.jpeg" alt="Boss" width="150" height="210" class="w3-circle w3-hover-opacity">
   <h3>Brianna Sanchez Ortega</h3>
   <p>Country Junky!</p>
 
 </div>
 
 <div class="hidey rap">
-  <img src="img/ishy.b.jpg" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity">
+  <h1>We think you would enjoy this genre: Country. Check the  Country playlist out below!</h1>
+  <img src="img/ishy.b.jpg" alt="Boss" width="150" height="210" class="w3-circle w3-hover-opacity">
   <h3>Ishmael Burton</h3>
   <p>Rap/Hip-Hop Junky!</p>
 </div>
 
 <div class="hidey jazz">
+  <p>We think you would enjoy this genre: Country. Check the  Country playlist out below!</p>
   <img src="img/jeremy.jpg" alt="Boss" width="150" height="210" class="w3-circle w3-hover-opacity">
   <h3>Jeremy Jacob Fransisco</h3>
   <p>Jazzmaster Junky!</p>
