--- a/Midterm/index.html
+++ b/Midterm/index.html
@@ -213,7 +213,7 @@
         <li class="w3-padding-16"><img src="img/no.chill.png" width="135" height="135"><audio src="mp3/rap/baby.mp3" controls></audio><b><br>Moneybagg Yo - No Chill (feat. Lil Baby & Rylo Rodriguez)<br></b></li>
         </li>
         <li class="w3-theme-l5 w3-padding-24">
-          <button class="w3-button w3-teal w3-padding-large"><i class="fa fa-check"></i> Link to Playlist</button>
+          <button class="w3-button w3-teal w3-padding-large"><i class="fa fa-check"><a href="https://youtube.com/playlist?list=PLTJmmYoPMuIuA15liRvL9m0hiSZmC9dO6"</i> Link to Playlist</button></a>
         </li>
       </ul>
     </div>
