--- a/Midterm/index.html
+++ b/Midterm/index.html
@@ -49,8 +49,10 @@
 
 
 <!-- Image Header -->
-<div class="w3-display-container w3-animate-opacity">
+<div class="container">
+<div class="header">
   <img src="img/3.png" alt="music" style="width:100%;min-height:350px;max-height:600px;">
+</div>
 </div>
 
 <!-- Modal -->
